--- a/README
+++ b/README
@@ -10,6 +10,13 @@
 
 ```
 
+$ docker run -it --cpuset-cpus="0-1" --shm-size 512m lifa08/em-odp:latest -c 0x3 -t
+
+```
+
+_Note_: we need to increase the size of share memmory, otherwise, following error would be introduced.
+
+```
 $ docker run -it --cpuset-cpus="0-1" lifa08/em-odp:latest -c 0x3 -t
 
 Coremask:   0x3
